samples/OK/fun_def_ret.php
<?php
declare(strict_types=1);
function foo(int $aaaaa, float $b, string $c) : int
{
    return 1;
}
